@@ -14,6 +14,14 @@
 
     Fix contributed by Michael Korbakov.
 
+- MongoDB: Better index for MongoDB transport (Issue #158). 
+    
+    This improvement will create a new compund index for queue and _id in order to be able
+    to use both indexed fields for getting a new message (using queue field) and sorting by _id.
+    It'll be necessary to manually delete the old index from the collection.
+
+    Improvement contributed by rmihael
+
 .. _version-2.4.6:
 
 2.4.6
